# ludogame-console

./: CMakeLists.txt  README.en.md  README.es.md
include/: dice.h  game.h  piece.h  player.h  table.h
src/: dice.cpp  game.cpp  main.cpp  piece.cpp  player.cpp  table.cpp
